PR libstdc++/83279 handle sendfile not copying entire file

PR libstdc++/83279
	* src/filesystem/std-ops.cc (do_copy_file): Handle sendfile not
	copying entire file.

From-SVN: r255666